--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.druid.url=jdbc:mysql://localhost:3306/yyz
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
 spring.datasource.druid.initialSize=5
+
+mybatis.mapper-locations=classpath:**/*Mapper.xml
