--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.druid.password=123456
 spring.datasource.druid.initialSize=5
 
 mybatis.mapper-locations=classpath:**/*Mapper.xml
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=0
